--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div id="skull-container">
-        <img id="skull-image" src="https://github.com/Dianamcaicedo/pruebas_si/blob/main/calavera.png" alt="¡Peligro de Seguridad!">
+        <img id="skull-image" src="calavera.png" alt="¡Peligro de Seguridad!">
         <h1>¡ADVERTENCIA DE SEGURIDAD!</h1>
         <p>Has hecho clic en un enlace potencialmente peligroso.</p>
         <p>Este es un ejercicio de concienciación de seguridad. En la vida real, ¡esto podría haber sido muy grave!</p>
